# guardian-backup

./: Cargo.toml  README.md
guardian-backup-application/: Cargo.toml
guardian-backup-application/src/: client_service.rs  encoding_service.rs  file_service.rs  lib.rs  server_config.rs  server_service.rs
guardian-backup-application/src/in_memory_repositories/: backup_repository.rs  blob_repository.rs  mod.rs
guardian-backup-application/src/model/: call.rs  client_backup_service.rs  client_config.rs  client_model.rs  connection_interface.rs  credential.rs  hash_service.rs  mod.rs  password_hash.rs  password_hash_algorithems.rs  response.rs  server_service.rs
guardian-backup-application/src/model/mocks/: mock_encoder_service.rs  mock_file_service.rs  mock_hash_service.rs  mod.rs  server_service_mock.rs
guardian-backup-application/src/remote_repositories/: backup_repository.rs  blob_repository.rs  mod.rs
guardian-backup-domain/: Cargo.toml
guardian-backup-domain/src/: hash_service.rs  lib.rs
guardian-backup-domain/src/helper/: mod.rs
guardian-backup-domain/src/model/: backup.rs  blob.rs  device.rs  device_identifier.rs  directory_metadata.rs  duration.rs  error.rs  file_hash.rs  file_metadata.rs  file_tree.rs  mod.rs  schedule.rs  schedule_rule.rs  snapshot.rs  timestamp.rs  user.rs  user_identifier.rs
guardian-backup-domain/src/model/backup/: backup.rs  mod.rs  schedule.rs  schedule_rule.rs  snapshot.rs
guardian-backup-domain/src/model/blobs/: blob_builder.rs  blob_creation_hint.rs  blob_fetch.rs  blob_identifier.rs  blob_metadata.rs  compression.rs  mod.rs
guardian-backup-domain/src/model/files/: directory_metadata.rs  file_hash.rs  file_metadata.rs  file_tree.rs  mod.rs
guardian-backup-domain/src/repositories/: backup_repository.rs  blob_repository.rs  mod.rs  user_repository.rs
guardian-backup-plugin-client/: Cargo.toml
guardian-backup-plugin-client/src/: blake_hash_service.rs  cbor_encoder_service.rs  cli.rs  lib.rs  main.rs  tokio_file.rs  tokio_file_service.rs
guardian-backup-plugin-client/src/connectivity/: mock_connection.rs  mod.rs  tcp_connection.rs  tokio_blob_fetch.rs
guardian-backup-plugin-server/: Cargo.toml
guardian-backup-plugin-server/src/: main.rs
guardian-backup-plugin-server/src/connectivity/: mock_connection.rs  mod.rs  tcp_connectivity.rs  tokio_blob_fetch.rs
