[package]
name = "guardian-backup-application"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["guardian-backup-domain/mocks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guardian-backup-domain = {path = "../guardian-backup-domain"}

log = "0.4"
serde = { version = "1.0.198", features = ["derive"] }
regex = "1.10.4"
