[package]
name = "guardian-backup-application"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["guardian-backup-domain/mocks", "ciborium"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ciborium = "0.2"
tokio = { version = "1.38", features = ["full"] }
guardian-backup-domain = { path = "../guardian-backup-domain", features = ["mocks"] }


[dependencies]
guardian-backup-domain = { path = "../guardian-backup-domain" }
ciborium = { version = "0.2", optional = true }


log = "0.4"
serde = { version = "1.0.198", features = ["derive"] }
regex = "1.10.4"
tokio = "1.38.0"
