[package]
name = "guardian-backup-plugin-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
guardian-backup-application = {path = "../guardian-backup-application", features = ["mocks"]}
tokio = {features = ["test-util"]}


[dependencies]
guardian-backup-application = {path="../guardian-backup-application"}
guardian-backup-domain = {path = "../guardian-backup-domain"}

tokio = {version = "1.37", features = ["macros", "io-util", "rt"]}

log = "0.4"
